# ferros-sabrelite-toy-system

./: Cargo.toml  README.md  build.sh  cargo-build.sh  sel4.toml  simulate.sh  workspace-build-wrapper.sh
applications/: TODO
applications/console/: Cargo.toml
applications/console/src/: lib.rs  main.rs
applications/hello-printer/: Cargo.toml
doc/: persistent_storage.puml  process_tree.puml
drivers/: TODO
drivers/enet/: Cargo.toml
drivers/enet/src/: lib.rs  main.rs
drivers/iomux/: '  Cargo.toml
drivers/iomux/src/: lib.rs  main.rs
drivers/persistent-storage/: Cargo.toml
drivers/persistent-storage/src/: flash_controller.rs  lib.rs  main.rs
drivers/tcpip/: Cargo.toml
drivers/tcpip/src/: ipc_phy_dev.rs  lib.rs  main.rs
imx6-devices/: Cargo.toml
imx6-devices/src/: ecspi1.rs  enet.rs  iomuxc.rs  lib.rs  uart1.rs
imx6-hal/: Cargo.toml
imx6-hal/src/: lib.rs  serial.rs  spi.rs  watchdog.rs
imx6-hal/src/enet/: mod.rs
imx6-hal/src/enet/dma/: ring.rs  ring_entry.rs
libraries/debug-logger/: Cargo.toml
libraries/net-types/src/: frame.rs  lib.rs
root-task/: Cargo.toml  build.rs
root-task/src/: error.rs  main.rs
sabrelite-bsp/: Cargo.toml
sabrelite-bsp/src/: debug_logger.rs  flash.rs  lib.rs
scripts/: build.sh  mkflash.sh  simulate.sh  workspace-build-wrapper.sh
