[package]
name = "imx6-hal"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2021"

[dependencies]
embedded-hal = "0.2"
nb = "0.1"

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.num]
version = "0.4"
default-features = false

[dependencies.imx6-devices]
path = "../imx6-devices"
