[package]
name = "root-task"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2021"

[dependencies]
selfe-sys = { git = "https://github.com/auxoncorp/selfe-sys" }
sel4-start = { git = "https://github.com/auxoncorp/selfe-sys", features = ["panic_handler"] }
selfe-arc = { git = "https://github.com/auxoncorp/selfe-sys", default-features = false, features = [] }
ferros = { git = "https://github.com/auxoncorp/ferros" }
typenum = "1.10"
xmas-elf = "0.7"

[dependencies.console]
path = "../applications/console"

[dependencies.imx6-hal]
path = "../imx6-hal"

[build-dependencies]
ferros-build = { git = "https://github.com/auxoncorp/ferros" }
